# groq-site-generator

./: .gitignore  pyproject.toml
src/groq_site_generator/: __init__.py  app.py  models.py
src/groq_site_generator/static/css/: style.css
src/groq_site_generator/static/js/: script.js
src/groq_site_generator/templates/: index.html
